tests/outref/TC005.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_TABLE_MULTIPLE_PRIMARY_KEYS : Multiple primary keys for table 'T1' are not allowed
Error with syntax near (line 1, column 42):

create table t1 (a int primary key, b int primary key);
                                          ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: create table t1 (a int primary key, b int primary key);

[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: T1
Error with syntax near (line 1, column 15):

select * from t1;
              ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from t1;

